Mar 08 2003  2.9.1  Actually implemented max clients for server and drone
                    Only perform network protocol conversions if there are
                     clients connected to speed up headless servers.
                    Tweaked packet mangling for fifo pipe
                    Fixed client counting
                    Added log data packet mangling
Mar 07 2003  2.9.1  Added encoding, error, and rate transmission to drone 
                     protocol
                    Sanitized drone protocol for cross-endian use
                    Added kismet-local min/max functions
                    Fixed segfault with drone source
                    Added header length offset and version to drone packet 
                     header
                    Added packet source logging to gpsxml, updated DTD
Mar 06 2003  2.9.1  Added 802.11 FHSS/DSSS distinction
                    Added encoding and data rate tracking
                    Changed DTD versioning to match kismet version
                    Included old DTD's in cvs again
Mar 05 2003  2.9.1  Fixed prism2 dropping FCS (should fix wep decoding)
                    Added additional wlanctl-ng commands to initialize the card
                     more cleanly, should help with some setups.
                    Added initial wlan-ng 0.2.0 AVS header support
Feb 26 2003  2.9.1  Changed named pipe to log all packets, not just data.
Feb 25 2003  2.9.1  Fixed Makefile.in for kismet_drone
                    Fixed kismet_hopper usage in kismet_monitor (patch from
                     Frank Strauss)
Feb 24 2003  2.9.1  Added man pages for drone and updated other man pages.
                    Updated README for drone info
                    Fixed segfault in new capturesource parsing
                    Added beacon/phy filtering to drones
                    Merged patch from Andreas Oberritter for IAPP dissection.
                    Merged patch from Faust for signal/power 1-line graph