@@ -4,6 +4,7 @@ Mar 08 2003  2.9.1  Actually implemented max clients for server and drone
                     Tweaked packet mangling for fifo pipe
                     Fixed client counting
                     Added log data packet mangling
+                    Added tracking decrypt success/failure rate for WEP keys
 Mar 07 2003  2.9.1  Added encoding, error, and rate transmission to drone 
                      protocol
                     Sanitized drone protocol for cross-endian use
